tests/ixml_not_011_simple_fail.test
START
s = vp.
vp = 'a', ![L], ~[].
INPUT
ab
OUTPUT
ixml:1:2: syntax error
ab
 ^
END